# AGI-EGGS

./: PLASMA_MEMORY.md  PROJECT_PLAN.md  Plasma Fusion control for quantum computing and as a solution for data, power storage and energy  Project Carbon Venus.txt  QUANTUM_CAPACITOR.md  README.md  TYPE-II-Lasers.txt  Usc10Sec253  agi_egg_backend.py  backend_api.py  civil_liberties_simulation.py  emergency_response.py  example.py  frontend.py  halo_mesh_example.py  index.html  laser_control.py  mesh_example.py  notifications_example.py  pyproject.toml  validation_protocol.py
agi_eggs/: __init__.py  config.py  context.py  ephemeral_mesh.py  network.py  node.py  notifications.py  persistence.py  power_manager.py
codex/: README.md  agent_state.json  agent_tracker.json  journal.md  log_progress.py  notes.md  progress_history.json  project_overview.json  self_progress.json  self_tasks.json  structure.json  structure_history.json  tasks.json  update_agent_state.py  update_overview.py  update_structure.py  uulp_compact_tasks.json
docs/: ADVANCED_MODULES.md  COMMUNICATION_PLAN.md  FUSION_CONTROL.md  HUMANITARIAN_INTEGRATION.md  LASER_SATELLITE_CONTROL.md  MOBILE_APP_INTEGRATION.md  PRESIDENTIAL_JURISDICTION.md  PROGRESS.md  PROJECT_PHOENIX.md  ROMAN_CONNECTION.md  STRATEGIC_ENHANCEMENTS.md  TODO.md  TRUST_MODULE.md
documents/: full_project.py
modules/: psych_support.py
tests/: test_aros.py  test_disaster_charging.py  test_ephemeral.py  test_infrastructure_mapper.py  test_network.py  test_network_sentinel.py  test_persistence.py  test_quality.py  test_radio_utilities.py  (+4 more)
(+62 files in other folders)
